# better_rcc

./: .gitignore  Cargo.toml  build.rs  nn_weights.mpk  samples.7z
.claude/: settings.local.json
docs/superpowers/plans/: 2026-04-09-evaluation-overhaul-plan.md  2026-04-10-book-tablebase-fix-plan.md  2026-04-10-burn-nn-training-plan.md  2026-04-10-nn-eval-plan.md  2026-04-11-nnue-network-plan.md  2026-04-12-nnue-xianqi-plan.md  2026-04-13-bitboard-movegen-eval-plan.md  2026-04-13-bitboard-phase1-plan.md  2026-04-13-bitboard-phase2-plan.md  2026-04-13-bitboard-phase3-plan.md  2026-04-13-bitboard-phase4-plan.md  2026-04-14-incremental-nnue-update-plan.md  2026-04-16-handcrafted-eval-rewrite-plan.md
docs/superpowers/specs/: 2026-04-09-evaluation-overhaul-design.md  2026-04-09-evaluation-rewrite-design.md  2026-04-10-book-tablebase-fix-design.md  2026-04-10-burn-nn-training-design.md  2026-04-10-nn-eval-design.md  2026-04-11-nnue-network-design.md  2026-04-12-nnue-xianqi-design.md  2026-04-13-bitboard-design.md  2026-04-13-bitboard-movegen-eval-design.md  2026-04-14-incremental-nnue-update-design.md  2026-04-15-nnue-feature-toggle-design.md  2026-04-16-handcrafted-eval-rewrite-design.md
src/: bitboards.rs  eval.rs  main.rs  nn_eval.rs  nn_train.rs  nnue_input.rs  nnue_state.rs  pgn_converter.rs
test_fixtures/: 00000001.pgn
