[package]
name = "better_rust_chinese_chess"
version = "0.1.0"
edition = "2024"

[dependencies]
smallvec = "1"
mimalloc = "0.1.48"
ahash = "0.8"
ndarray = { version = "0.17", optional = true }
serde = { version = "1", features = ["derive"] }
encoding_rs = { version = "0.8", optional = true }
zstd = { version = "0.13", optional = true }
bincode = { version = "1", optional = true }

[dev-dependencies]
rand = "0.8"

[dependencies.burn]
version = "0.21.0-pre.3"
optional = true

[dependencies.burn-ndarray]
version = "0.21.0-pre.3"
optional = true

[dependencies.burn-autodiff]
version = "0.21.0-pre.3"
optional = true

[dependencies.burn-nn]
version = "0.21.0-pre.3"
optional = true

[dependencies.burn-optim]
version = "0.21.0-pre.3"
optional = true

[dependencies.burn-derive]
version = "0.21.0-pre.3"
optional = true

[features]
train = ["dep:burn", "dep:burn-ndarray", "dep:burn-autodiff", "dep:burn-nn", "dep:burn-optim", "dep:burn-derive", "dep:encoding_rs", "nnue"]
nnue = ["dep:zstd", "dep:bincode", "dep:ndarray"]
burn = []
burn-ndarray = ["burn"]
burn-autodiff = ["burn"]
burn-nn = ["burn"]
burn-optim = ["burn"]
burn-derive = ["burn"]

[profile.dev]
opt-level = 3
debug = false
lto = true

[profile.release]
opt-level = 3
lto = true
